tests/valid/Embedded_Functions/getClass_Function.vyp
class Circle : Object {}

void main(void) {
    Circle c;
    c = new Circle;
    print("Class: ", c.getClass(), "\n");
}
