tests/invalid/Class_and_Object/test1.vyp
void main(void) {
    Shape s;
    s = new Shape;
}
